[package]
name = "bevy_vr_blocks"
version = "0.1.0"
edition = "2021"

[dependencies]
# the bevy_xr releated dependencies target the webxr-refactor branch

bevy_mod_openxr = "0.1.0-rc1"
bevy_mod_xr = "0.1.0-rc1"
bevy_xr_utils = "0.1.0-rc1"
bevy = "0.14.0"
avian3d = "0.1.0"
bevy_embedded_assets = "0.11.0"
random-number = "0.1.8"

[lib]
name = "bevy_vr_blocks"
crate-type = ["rlib", "cdylib"]

